# audioencoder.lame

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: sync-addon-metadata-translations.yml
audioencoder.lame/: addon.xml  addon.xml.in
audioencoder.lame/resources/language/resource.language.af_za/: strings.po
audioencoder.lame/resources/language/resource.language.am_et/: strings.po
audioencoder.lame/resources/language/resource.language.ar_sa/: strings.po
audioencoder.lame/resources/language/resource.language.ast_es/: strings.po
audioencoder.lame/resources/language/resource.language.az_az/: strings.po
audioencoder.lame/resources/language/resource.language.be_by/: strings.po
audioencoder.lame/resources/language/resource.language.bg_bg/: strings.po
audioencoder.lame/resources/language/resource.language.bs_ba/: strings.po
audioencoder.lame/resources/language/resource.language.ca_es/: strings.po
audioencoder.lame/resources/language/resource.language.cs_cz/: strings.po
audioencoder.lame/resources/language/resource.language.cy_gb/: strings.po
audioencoder.lame/resources/language/resource.language.da_dk/: strings.po
audioencoder.lame/resources/language/resource.language.el_gr/: strings.po
audioencoder.lame/resources/language/resource.language.en_au/: strings.po
debian/: changelog  changelog.in  control  copyright  kodi-audioencoder-lame.install  rules
depends/common/lame/: CMakeLists.txt  lame.txt
depends/windows/lame/: CMakeLists.txt  lame.sha256  lame.txt
src/: EncoderLame.cpp
(+64 files in other folders)
